# infosedd

./: README.md  pyproject.toml
evaluation/: run.py  run_experiment.sh
evaluation/config.d/: config.yaml
evaluation/config.d/distribution/: categorical_long_vector.yaml
evaluation/config.d/estimator/: infosedd.yaml
evaluation/config.d/estimator/model/: unetmlp_150k.yaml
knife/: knife.py
src/infosedd/: __init__.py  custom_rvs.py  graph_lib.py  infosedd.py  load_model.py  losses.py  noise_lib.py  sampling.py  utils.py
src/infosedd/model/: ema.py  transformer.py  unetmlp.py  unetmlp_seq.py  utils.py
src/infosedd/neural_estimators/: infonce.py  mine.py  mine_backbone.py
