[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infosedd"
version = "2025.01.13"
authors = [
  { name="Alberto Foresti", email="alberto.foresti@eurecom.fr" },
]
description = "Package for estimation of mutual information of discrete random variables"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.2.0",
    "aiohappyeyeballs==2.4.4",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.7.0",
    "argcomplete==3.5.3",
    "argh==0.31.3",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asciitree==0.3.3",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "async-timeout==5.0.1",
    "babel==2.16.0",
    "backports.tarfile==1.2.0",
    "beautifulsoup4==4.12.3",
    "bebeziana @ git+https://github.com/VanessB/bebeziana@ab124238cb8e2ffb6b43bfd75fdc256819fd9c56",
    "binaryornot==0.4.4",
    "biopython==1.85",
    "bleach==6.2.0",
    "boto3==1.36.22",
    "botocore==1.36.22",
    "braceexpand==0.1.7",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "chex==0.1.88",
    "click==8.1.7",
    "cloudpickle==3.1.0",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cookiecutter==2.6.0",
    "cryptography==44.0.0",
    "cycler==0.12.1",
    "dask==2025.2.0",
    "dask-glm==0.3.2",
    "dask-ml==2025.1.0",
    "datasets==3.1.0",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "diffusers==0.32.1",
    "dill==0.3.8",
    "distlib==0.3.9",
    "distributed==2025.2.0",
    "distribution_generator @ git+https://github.com/AlbertoForesti/distribution-generator@2052d59f5c804eecfbdc808714d2515e82c11d95",
    "dm-tree==0.1.8",
    "docker-pycreds==0.4.0",
    "einops==0.8.0",
    "equinox==0.10.11",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fasteners==0.19",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "fonttools==4.56.0",
    "fqdn==1.5.1",
    "fqfa==1.3.1",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "future==1.0.0",
    "gast==0.6.0",
    "gdown==5.2.0",
    "gffutils==0.13",
    "git-lfs==1.6",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "h5py==3.12.1",
    "hatch==1.13.0",
    "hatchling==1.26.3",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.26.5",
    "hydra-core==1.3.2",
    "hyperlink==21.0.0",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jax==0.4.38",
    "jaxlib==0.4.38",
    "jaxtyping==0.2.36",
    "jedi==0.19.2",
    "jeepney==0.8.0",
    "Jinja2==3.1.4",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyter_server==2.14.2",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.3.2",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "jupyterlab_widgets==3.0.13",
    "keyring==25.5.0",
    "kiwisolver==1.4.8",
    "lightning-utilities==0.11.9",
    "llvmlite==0.44.0",
    "locket==1.0.0",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mavehgvs==0.6.2",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "ml_dtypes==0.5.1",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multipledispatch==1.0.0",
    "multiprocess==0.70.16",
    "mutinfo @ git+https://github.com/VanessB/mutinfo@80acc3cd2f5ab418351ca9703e99aee970c31144",
    "natsort==8.4.0",
    "nbclient==0.10.1",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "ncls==0.0.68",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.1",
    "notebook_shim==0.2.4",
    "numba==0.61.0",
    "numcodecs==0.13.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-ml-py==12.560.30",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "nvitop==1.4.1",
    "omegaconf==2.3.0",
    "opt_einsum==3.4.0",
    "optax==0.1.9",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "partd==1.4.2",
    "pathspec==0.12.1",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "positional-encodings==6.0.3",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.50",
    "propcache==0.2.1",
    "protobuf==5.29.1",
    "psutil==6.1.1",
    "pure_eval==0.2.3",
    "pyaml==25.1.0",
    "pyarrow==18.1.0",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pyfaidx==0.8.1.3",
    "pyliftover==0.4.1",
    "pyparsing==3.2.1",
    "pyranges==0.1.2",
    "pysam==0.23.0",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "python-slugify==8.0.4",
    "pytorch-lightning==1.9.3",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "pyzmq==26.2.1",
    "regex==2024.11.6",
    "related==0.7.3",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "s3transfer==0.11.2",
    "safetensors==0.4.5",
    "scikit-learn==1.6.1",
    "scikit-optimize==0.10.2",
    "scipy==1.14.1",
    "SecretStorage==3.3.3",
    "Send2Trash==1.8.3",
    "sentry-sdk==2.22.0",
    "setproctitle==1.3.4",
    "sgkit==0.9.0",
    "shellingham==1.5.4",
    "simplejson==3.20.1",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sorted-nearest==0.0.39",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sparse==0.15.5",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tblib==3.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow-probability==0.20.1",
    "termcolor==2.5.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "tinydb==4.8.2",
    "tokenizers==0.21.0",
    "tomli==2.2.1",
    "tomli_w==1.1.0",
    "tomlkit==0.13.2",
    "toolz==1.0.0",
    "torch==2.5.1",
    "torchkld @ git+https://github.com/VanessB/pytorch-kld@664d79535d0fb9e3bfe39fc6f398964d695cb7b0",
    "torchmetrics==1.6.0",
    "torchvision==0.20.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.47.0",
    "triton==3.1.0",
    "trove-classifiers==2024.10.21.16",
    "types-python-dateutil==2.9.0.20241206",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "userpath==1.9.2",
    "uv==0.5.7",
    "vcfpy==0.13.8",
    "virtualenv==20.28.0",
    "wandb==0.19.6",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webdataset==0.2.111",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "Werkzeug==3.1.3",
    "widgetsnbextension==4.0.13",
    "xarray==2025.1.2",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zarr==2.18.3",
    "zict==3.0.0",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.black]
line-length = 88
target-version = ["py39", "py38", "py37", "py36", "py35"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["src/infosedd"]

[tool.hatch.metadata]
allow-direct-references = true
